dark mode fixes

--- a/public_files/static_css/blackmode.css
+++ b/public_files/static_css/blackmode.css
@@ -12463,3 +12463,7 @@ table.dataTable tr:nth-of-type(odd) {
 .lower-brightness{
     filter:var(--brightness-img)
 }
+
+#darkmode-text{
+    color: var(--font-color) !important;
+}
